--- a/Project Assets/index.css
+++ b/Project Assets/index.css
@@ -33,7 +33,7 @@ nav>.logo>ul>li{
 #header>.top>h2{
     display: block;
     text-align: left;
-    font: size 36px;
+    font-size: 36px;
     color:yellow;
     padding-left: 50px;
 }
