--- a/Project Assets/index.css
+++ b/Project Assets/index.css
@@ -15,14 +15,17 @@ body{
     height:100vh;
     justify-content: center;
 }
-#header> nav{
+ ul{
     display: flex;
+    list-style-type: none;
+    padding-left: 800px;
     justify-content: space-between;
+    color:white;
+    margin-right: 200px;
+    margin-top: 5px;
 }
 nav>.logo>ul>li{
-    display:inline-block;
-    padding-left: 150px;
-    color: white;
+    margin: bottom 100px;
 }
 .sub{
     background-color:yellow;
