--- a/Project Assets/index.css
+++ b/Project Assets/index.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,200&display=swap');  
 *{
     border: 3px ;
 }
 body{
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,200&display=swap');    margin: 30px;
+      margin: 30px;
     padding: 0;
     font-family: Poppins,  Actor, Adamina;
     background-color: white;
@@ -72,91 +73,25 @@ nav>.logo>ul>li{
   width:20%;
 }
 #movers{
+  background-color: whitesmoke;
+}
+.A+{
+  background-color: white;
+}
+h7{
+  margin-left:50px;
+  font-size: larger;
+}
+.co-movers{
     display: flex;
-    flex-direction:row;
+    flex-wrap: wrap;
     justify-content:space-between;
     padding: 50px;
 }
-#two{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 30px;
-}
-.footer {
-    display: flex;
-    flex-flow: row wrap;
-    padding: 30px 30px 20px 30px;
-    color: #2f2f2f;
-    background-color: #14130c;
-    border-top: 1px solid #e5e5e5;
-  }
-  .footer > * {
-    flex:  1 100%;
-  }
-  .footer-dark {
-    margin-right: 1.25em;
-    margin-bottom: 2em;
-  }
-  .footer_add{
-    font-family: 'Pacifico', cursive;
-    font-weight: 400;
-    text-transform: lowercase;
-    font-size: 1.5rem;
-  }
-  .footer_add h6{
-    font-family: 'Pacifico', cursive;
-    font-weight: 400;
-    text-transform: lowercase;
-    font-size: 1.5rem;
-    color:white;
-  }
-  .footer-dark h8 {
-    margin-top: 1.3em;
-    font-size: 16px;
-    font-weight: 400;
-  }
-  .nav_title {
-    font-weight: 400;
-    font-size: 15px;
-  }
-.footer ul {
-    list-style: none;
-    padding-left: 0;
-  }
-  
-  .footer li {
-    line-height: 2em;
-  }
-  
-  .footer a {
-    text-decoration: none;
-  }
-  
-  .footer_nav {
-    border: 5px #14130c;
-    margin-left:500px;
-    display:flex;
-  }
-  
-  .footer_nav > * {
-    flex: 30%;
-  }
-  
-  .nav_ul a {
-    color: #999;
-  }
-  
-  .nav_ul--extra {
-    column-count: 1;
-    column-gap: 2.25em;
-  }
-  hr {
-    border: none;
-    border-top: 3px double #333;
-    color: #333;
-    overflow: visible;
-    text-align: center;
-    height: 5px;
-    width: 50%;
+.upesi,.mashinani,.ufalme,.chap,.a-mob,.mari{
+  background-color: white;
+  height: 15%;
+  text-align:justify;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius:0.5rem ;
 }
