--- a/Project Assets/pages/style.css
+++ b/Project Assets/pages/style.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,200&display=swap'); 
 *{
     border: 3px ;
 }
 body{
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,200&display=swap');    margin: 30px;
+       margin: 30px;
     padding: 0;
     font-family: Poppins,  Actor, Adamina;
     background-color:whitesmoke;
@@ -18,6 +19,7 @@ body{
 }
 .sub{
     background-color: orange;
+    border-top-right-radius: 0.8rem;
 }
 nav>.logo>ul>li{
     display:inline-block;
@@ -151,9 +153,16 @@ p8{
     color:white;
   }
   h12{
-    padding-left:1200px;
-    border:5px solid #14130c;
-    width: 50%;
+    
+    width: 10%;
+    
+  }
+  button{
+    float: right;
+    padding-bottom: 0px;
+    background-color: orange;
+    border-top-right-radius: 0.8rem;
+    height: 50%;
   }
   .footer-dark h8 {
     margin-top: 1.3em;
