--- a/Project Assets/index.css
+++ b/Project Assets/index.css
@@ -95,3 +95,83 @@ h7{
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius:0.5rem ;
 }
+.footer {
+    display: flex;
+    flex-flow: row wrap;
+    padding: 30px 30px 20px 30px;
+    color: #2f2f2f;
+    background-color: #14130c;
+    border-top: 1px solid #e5e5e5;
+  }
+  .footer > * {
+    flex:  1 100%;
+  }
+  .footer-dark {
+    margin-right: 1.25em;
+    margin-bottom: 2em;
+  }
+  .footer_add{
+    font-family: 'Pacifico', cursive;
+    font-weight: 400;
+    text-transform: lowercase;
+    font-size: 1.5rem;
+  }
+  .footer_add h6{
+    font-family: 'Pacifico', cursive;
+    font-weight: 400;
+    text-transform: lowercase;
+    font-size: 1.5rem;
+    color:white;
+  }
+  h12{
+    
+    width: 10%;
+    
+  }
+  button{
+    float: right;
+    padding-bottom: 0px;
+    background-color: orange;
+    border-top-right-radius: 0.8rem;
+    height: 50%;
+  }
+  .footer-dark h8 {
+    margin-top: 1.3em;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  .nav_title {
+    font-weight: 400;
+    font-size: 15px;
+  }
+.footer ul {
+    list-style: none;
+    padding-left: 0;
+  }
+  
+  .footer li {
+    line-height: 2em;
+  }
+  
+  .footer a {
+    text-decoration: none;
+  }
+  
+  .footer_nav {
+    border: 5px #14130c;
+    margin-left:150px;
+    float:right;
+  }
+  
+  .footer_nav > * {
+    flex-direction: row;
+  }
+  
+  .nav_ul a{
+    color: #999;
+  }
+  
+  .nav_ul--extra {
+    column-count: 1;
+    column-gap: 2.25em;
+  }
