adds css property to the footer

--- a/Project Assets/pages/style.css
+++ b/Project Assets/pages/style.css
@@ -38,6 +38,9 @@ nav>.logo>ul>li{
     margin: 100px;
     margin-top: -700px;
 }
+.modern{
+  padding-left: 50px;
+}
 p8{
     background-color: black;
     color:white;
