--- a/Project Assets/index.css
+++ b/Project Assets/index.css
@@ -55,13 +55,15 @@ nav>.logo>ul>li{
   background-color: yellow;
   color:black;
   width:100%;
-  border-top-right-radius: 0.1rem;
+  border-top-right-radius: 0.4rem;
+  height: fit-content;
 }
 #four{
   background-color: black;
   color:yellow;
   width:100%;
-  border-top-right-radius: 0.1rem;
+  border-top-right-radius: 0.4rem;
+  height:fit-content;
 }
 .motiv{
     padding-left: 200px;
@@ -96,82 +98,128 @@ h7{
   border-bottom-right-radius:0.5rem ;
 }
 .footer {
-    display: flex;
-    flex-flow: row wrap;
-    padding: 30px 30px 20px 30px;
-    color: #2f2f2f;
-    background-color: #14130c;
-    border-top: 1px solid #e5e5e5;
-  }
-  .footer > * {
-    flex:  1 100%;
-  }
-  .footer-dark {
-    margin-right: 1.25em;
-    margin-bottom: 2em;
-  }
-  .footer_add{
-    font-family: 'Pacifico', cursive;
-    font-weight: 400;
-    text-transform: lowercase;
-    font-size: 1.5rem;
-  }
-  .footer_add h6{
-    font-family: 'Pacifico', cursive;
-    font-weight: 400;
-    text-transform: lowercase;
-    font-size: 1.5rem;
-    color:white;
-  }
-  h12{
-    
-    width: 10%;
-    
-  }
-  button{
-    float: right;
-    padding-bottom: 0px;
-    background-color: orange;
-    border-top-right-radius: 0.8rem;
-    height: 50%;
-  }
-  .footer-dark h8 {
-    margin-top: 1.3em;
-    font-size: 16px;
-    font-weight: 400;
-  }
-  .nav_title {
-    font-weight: 400;
-    font-size: 15px;
-  }
+  display: flex;
+  flex-flow: row wrap;
+  padding: 30px 30px 20px 30px;
+  color: #2f2f2f;
+  background-color: black;
+  border-top: 1px solid #e5e5e5;
+}
+
+.footer > * {
+  flex:  1 100%;
+}
+
+.footer__addr {
+  margin-right: 1.25em;
+  margin-bottom: 2em;
+}
+
+.footer__logo {
+  font-family: 'Pacifico', cursive;
+  font-weight: 400;
+  text-transform: lowercase;
+  font-size: 1.5rem;
+}
+
+.footer__addr h2 {
+  margin-top: 1.3em;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.nav__title {
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.footer address {
+  font-style: normal;
+  color: #999;
+}
+
+.footer__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  max-width: max-content;
+  background-color: rgb(33, 33, 33, 0.07);
+  border-radius: 100px;
+  color: #2f2f2f;
+  line-height: 0;
+  margin: 0.6em 0;
+  font-size: 1rem;
+  padding: 0 1.3em;
+}
+
 .footer ul {
-    list-style: none;
-    padding-left: 0;
+  list-style: none;
+  padding-left: 0;
+}
+
+.footer li {
+  line-height: 2em;
+}
+
+.footer a {
+  text-decoration: none;
+}
+
+.footer__nav {
+  display: flex;
+	flex-flow: row wrap;
+}
+
+.footer__nav > * {
+  flex: 1 50%;
+  margin-right: 1.25em;
+}
+
+.nav__ul a {
+  color: white;
+}
+
+.nav__ul--extra {
+  column-count: 1;
+  column-gap: 1em;
+}
+
+.legal {
+  display: flex;
+  flex-wrap: wrap;
+  color: #999;
+}
+  
+.legal__links {
+  display: flex;
+  align-items: center;
+}
+
+.heart {
+  color: blue;
+}
+
+@media screen and (min-width: 24.375em) {
+  .legal .legal__links {
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 40.375em) {
+  .footer__nav > * {
+    flex: 1;
   }
   
-  .footer li {
-    line-height: 2em;
+  .nav__item--extra {
+    flex-grow: 2;
   }
   
-  .footer a {
-    text-decoration: none;
+  .footer__addr {
+    flex: 1 0px;
   }
   
-  .footer_nav {
-    border: 5px #14130c;
-    margin-left:150px;
-    float:right;
+  .footer__nav {
+    flex: 2 0px;
   }
-  
-  .footer_nav > * {
-    flex-direction: row;
-  }
-  
-  .nav_ul a{
-    color: #999;
-  }
-  
-  .nav_ul--extra {
-    column-count: 1;
-    column-gap: 2.25em;
-  }
+}
